# Pain-Engine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .ignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build.bat  configure.bat  configure.sh  utf8stuff.py  vcpkg.json
Example/: CMakeLists.txt
Example/ecsTest/src/: main.cpp
Example/example2d/: CMakeLists.txt
Example/example2d/src/: main.cpp  sandbox2d.cpp
Example/example3d/: CMakeLists.txt
Example/example3d/src/: sandbox.cpp
Example/flappybird/: CMakeLists.txt
Example/flappybird/include/: CameraController.h  ImGuiController.h
Example/flappybird/src/: CameraController.cpp  Player.cpp  main.cpp
Example/flipbird/: CMakeLists.txt
Example/flipbird/include/: CameraController.h  Game.h  Obstacles.h  Player.h
Example/flipbird/src/: CameraController.cpp  Game.cpp  Obstacles.cpp  Player.cpp  main.cpp
Example/scriptGame/: CMakeLists.txt
Example/scriptGame/include/: Asteroid.h  Bullet.h  Dumb.h  EarlyScript.h  Editor.h  MousePointer.h  Player.h  Player3d.h  Spawner.h  Stars.h  Wall.h  dummy.h
Example/scriptGame/resources/: .gitignore
Example/scriptGame/src/: Asteroid.cpp  Bullet.cpp  Dumb.cpp  MousePointer.cpp  Player.cpp  Player3d.cpp  Spawner.cpp  Stars.cpp  Wall.cpp  dummy.cpp  main.cpp
Example/spriteGame/: CMakeLists.txt
Example/spriteGame/include/: Chunk.h  initialMap.h
Example/spriteGame/src/: Chunk.cpp  initialMap.cpp  main.cpp
Example/src/: CMakeLists.txt  sandbox.cpp
Example/textRendering/: CMakeLists.txt
Example/textRendering/src/: main.cpp
Example/twoBodyAnimation/: CMakeLists.txt
Example/twoBodyAnimation/include/: CelestialBodies.h  Game.h
Example/twoBodyAnimation/src/: CelestialBodies.cpp  Game.cpp  main.cpp
Pain/: CMakeLists.txt  a
Pain/include/: Core.h  Layer.h  aliases.h  pain.h  pch.gch  pch.h  pch.h.gch
Pain/include/Assets/: DefaultNativeScript.h  DefaultTexture.h  DeltaTime.h  HighResolutionTimer.h  IniWrapper.h  ManagerFile.h  ManagerIni.h  ManagerScripts.h  ManagerTexture.h  RandNumberGenerator.h  ResourceManager.h
Pain/include/CoreFiles/: AppConstants.h  Application.cppm  Application.h  Application.ixx  Core.h  DeltaTime.cppm  DeltaTime.h  DeltaTime.ixx  EndGameFlags.h  ImGuiController.h  Layer.h  LayerStack.h  LogWrapper.h  RandNumberGenerator.cppm  RandNumberGenerator.h  RandNumberGenerator.ixx  RenderPipeline.h  ResourceManagerSing.cppm  ResourceManagerSing.h  ResourceManagerSing.ixx  ThreadPool.h
Pain/include/CoreRender/: AllBuffers.cppm  AllBuffers.h  AllBuffers.ixx  BufferLayout.cppm  BufferLayout.h  BufferLayout.ixx  Buffers.h  Camera.cppm  Camera.h  Camera.ixx  CameraComponent.h  FrameBuffer.h  ImageFormat.h  RenderSys.h  Renderer.h  Renderer2d.h  Shader.cppm  Shader.h  Shader.ixx  ShaderManager.cppm  ShaderManager.h  ShaderManager.ixx  System.h  Texture.cppm  Texture.h  Texture.ixx  VertexArray.cppm  VertexArray.h  VertexArray.ixx
Pain/include/Debugging/: DebuggingImGui.h  DefaultImGui.cppm  DefaultImGui.ixx  OpenGLDebugger.h  Profiling.h
Pain/include/ECS/: Entity.h  Entity.ixx  EventDispatcher.h  GameObjWrapper.h  GameObject.cppm  GameObject.h  GameObject.ixx  InitalizeScript.cppm  Registry.h  Scene.cppm  Scene.h  Scene.ixx  SceneManager.cppm  SceneManager.h  Scriptable.cppm  Scriptable.h  Scriptable.ixx  Systems.h  UIScene.h  WithScript.h  WorldScene.h  WorldSys.h
Pain/include/GUI/: ImGuiComponent.h  ImGuiDebugMenu.h  ImGuiDebugRegistry.h  ImGuiSys.h  ImGuiSystem.h  Launcher.h
Pain/include/Misc/: BasicOrthoCamera.cppm  BasicOrthoCamera.h  BasicOrthoCameraObj.h  BasicPerspCamera.h  BasicShape.cppm  BasicShape.h  BasicShape.ixx  CameraSys.h  Events.h  ImGuiController.cppm  ImGuiController.ixx  OrthoCamera.h  OrthoCameraController.h  PerspCameraController.cppm  PerspCameraController.h  PerspCameraController.ixx  SimpleShapeClasses.cppm  SimpleShapeClasses.h  SimpleShapeClasses.ixx  TextureSheet.h
Pain/include/Physics/: Kinematics.h  KinematicsSys.h  Movement3dComponent.h  MovementComponent.h  RotationComponent.h
Pain/include/Scripting/: CollisionCallback.h  Component.h  Concepts.h  InputManager.h  LuaScriptComponent.h  LuaScriptSys.h  LuaScriptSystem.h  NativeScriptSys.h  NativeSystem.h  SchedulerComponent.h  SchedulerSys.h  StandAlone.h  State.h
Pain/platform/: BuffersBackend.h  ContextBackend.h  FrameBufferBackend.h  ShaderBackend.h  TextureBackend.h  VertexArrayBackend.h
Pain/platform/OpenGL/: BufferBackend.cpp  ContextBackend.cpp  FrameBufferBackend.cpp  OpenGLDebugger.cpp  OpenGLDebugger.h  ShaderBackend.cpp  TextureBackend.cpp  VertexArrayBackend.cpp
Pain/resources/scripts/: .gitignore  .luarc.json  engine_api.d.lua
Pain/resources/shaders/: Renderer2dText.glsl  SprayParticles.glsl  Text.glsl  Texture.glsl
Pain/src/: CMakeLists.txt  Layer.cpp  pain.cpp  pain.h  pch.cpp
Pain/src/Assets/: DefaultNativeScript.cpp  DefaultTexture.cpp  ManagerFile.cpp  ManagerIni.cpp  ManagerTexture.cpp  ResourceManager.cpp
Pain/src/CoreFiles/: AppConstants.cpp  Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  LayerStack.cpp  LogWrapper.cpp  LogWrapper.h  RenderPipeline.cpp  ResourceManager.cpp  ResourceManagerSing.cpp  ThreadPool.cpp
Pain/src/CoreRender/: AllBuffers.cpp  Buffers.cpp  Camera.cpp  CameraComponent.cpp  FrameBuffer.cpp  RenderSys.cpp  Renderer.cpp  Renderer2d.cpp  Shader.cpp  ShaderManager.cpp  System.cpp  Texture.cpp  VertexArray.cpp
Pain/src/Debugging/: DebuggingImGui.cpp  DefaultImGui.cpp  OpenGLDebugger.cpp  Profiling.cpp  test.cpp
Pain/src/ECS/: EventDispatcher.cpp  GameObjWrapper.cpp  GameObject.cpp  InitializeScript.cpp  Registry.cpp  Scene.cpp  SceneManager.cpp  Scriptable.cpp  UIScene.cpp  WorldScene.cpp  WorldSys.cpp
Pain/src/GUI/: ImGuiDebugMenu.cpp  ImGuiDebugRegistry.cpp  ImGuiSys.cpp  ImGuiSystem.cpp  Launcher.cpp
Pain/src/Misc/: BasicOrthoCamera.cpp  BasicOrthoCameraObj.cpp  BasicPerspCamera.cpp  BasicShape.cpp  CameraController.cpp  CameraSys.cpp  Events.cpp  ImGuiController.cpp  Launcher.cpp  OrthoCamera.cpp  OrthoCameraController.cpp  (+3 more)
src/: CMakeLists.txt
(+165 files in other folders)
